--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1"
   },
-  "name": "schelduded-visting",
+  "name": "scheduled-visiting",
   "author": {
     "name": "Dat Tuan Ho",
     "email": "datuanho2k9@gmail.com"
